// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ToolbarReducer should handle specific defined types: defined type SET_ACTIVE_FILTERS 1`] = `
{
  "result": {
    "filters": {
      "test_id": {
        "activeFilters": Set {
          "lorem",
        },
      },
    },
  },
  "type": "SET_ACTIVE_FILTERS",
}
`;

exports[`ToolbarReducer should handle specific defined types: defined type SET_FILTER_TYPE 1`] = `
{
  "result": {
    "filters": {
      "test_id": {
        "currentFilter": "lorem",
      },
    },
  },
  "type": "SET_FILTER_TYPE",
}
`;
